# gstreamer_train_iced

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: pipewireex.rs  urlvideo.rs
src/: gstreamerbase.rs  gstreamerpipewire.rs  lib.rs  main.rs
