[package]
name = "gstreamer_iced"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "simple binding for gstreamer for iced"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/gstreamer_iced"
documentation = "https://docs.rs/gstreamer_iced/"
keywords = ["pipewire", "iced", "gstreamer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
iced = { version = "0.10", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
gstreamer = "0.21.1"
gstreamer-app = "0.21.1"

url = "2.4.1"
smol = "1.3.0"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
iced = { version = "0.10", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
ashpd = { version = "0.6.7", default-features = false, features = [
	"tokio",
	"pipewire",
	"wayland",
] }

[package.metadata.nix]
systems = ["x86_64-linux"]
app = true
build = true
runtimeLibs = [
    "vulkan-loader",
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base",
]
buildInputs = ["libxkbcommon", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base"]
