[package]
name = "gstreamer_iced"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "simple binding for gstreamer for iced"
authors = ["Decodertalkers <aakari@tutanota.com>"]
homepage = "https://github.com/Decodetalkers/gstreamer_iced"
documentation = "https://docs.rs/gstreamer_iced/"
keywords = ["pipewire", "iced", "gstreamer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
iced = { version = "0.12", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
gstreamer = "0.22.1"
gstreamer-app = "0.22.0"

url = "2.5.0"
smol = "2.0.0"
thiserror = "1.0.57"
futures = "0.3.30"
futures-time = "3.0.0"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
iced = { version = "0.12", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"svg",
] }
ashpd = { version = "0.8.1", default-features = false, features = [
	"tokio",
	"pipewire",
	"wayland",
] }
